<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mytasks"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_mytasks" />
        <item
            android:id="@+id/nav_addtask"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_addtask" />
        <item
            android:id="@+id/nav_grouptasks"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_grouptasks"/>
        <item
            android:id="@+id/nav_addgroup"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_addgroup"/>
        <item
            android:id="@+id/nav_editgroup"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_editgroup"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout"/>
    </group>
</menu>
