<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddGroup.AddGroupFragment">

    <LinearLayout
        android:id="@+id/nameLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/nameView"
            android:text="@string/Groupname"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/Nameedit"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/idLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/idView"
            android:text="@string/GroupID"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/groupIDEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/groupID"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/adminLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/idLayout">

        <TextView
            android:id="@+id/idView2"
            android:text="@string/AdminID"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/adminIDEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/adminID"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tasksLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/adminLayout">

        <TextView
            android:id="@+id/idView3"
            android:text="@string/Tasks"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/tasksIDsEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/tasksIDs"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/usersLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tasksLayout"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/usersID"
            android:text="@string/UsersRoles"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/usersIDsEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/IDsRoles"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_marginEnd="276dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersLayout"
        app:layout_constraintVertical_bias="0.0"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/groupsLayout"
            android:orientation="vertical"
            android:layout_width="130dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/groupsTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/Gr"
                android:ems="10" />

            <TextView
                android:id="@+id/groups"
                android:text="..."
                android:layout_width="match_parent"
                android:layout_height="700dp" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="136dp"
        android:layout_height="352dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="136dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/usersLayout">

        <LinearLayout
            android:id="@+id/TasksLayout"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tasksTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/Ts"
                android:ems="10" />

            <TextView
                android:id="@+id/tasks"
                android:text="..."
                android:layout_width="match_parent"
                android:layout_height="700dp" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollview3"
        android:layout_width="134dp"
        android:layout_height="352dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/usersLayout">

        <LinearLayout
            android:id="@+id/UsersLayout"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/UsersTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/Us"
                android:ems="10" />

            <TextView
                android:id="@+id/users"
                android:text="..."
                android:layout_width="match_parent"
                android:layout_height="700dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>




