<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.EditGroup.EditGroupFragment">
    <LinearLayout
        android:id="@+id/groupLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">
        <TextView
            android:text="Group"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@color/colorBlack" />

        <Spinner
            android:id="@+id/groupToEdit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.4"
            android:paddingLeft="10dp"
            android:singleLine="true"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/chooseGroupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/groupLayout">


        <Button
            android:id="@+id/chooseGroupButton"
            android:text="Choose"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.6"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textAlignment="center" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/chooseGroupLayout"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/nameView"
            android:text="@string/Groupname"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:layout_marginRight="10dp" />

        <EditText
            android:id="@+id/nameEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/Nameedit"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/adminLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout">

        <TextView
            android:id="@+id/idView2"
            android:text="@string/AdminID"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/adminEdit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:text="@string/adminID"
            android:ems="10"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/membersLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/adminLayout"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/members"
            android:text=" Members"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/membersButton"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:text="Choose members"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="Cancel"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="Submit"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>




